--- a/app/src/main/res/layout/activity_chatting_detail.xml
+++ b/app/src/main/res/layout/activity_chatting_detail.xml
@@ -20,7 +20,7 @@
             android:id="@+id/chatting_detail_pharmacist_civ"
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:src="@drawable/ic_launcher_background"
+            android:src="@drawable/img_women_nostroke"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
 
@@ -29,18 +29,23 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
+
             android:text="0000약국 약사"
-            android:textSize="24sp"
+            android:textSize="60px"
             android:textStyle="bold"
             android:textColor="@color/black"
+
             app:layout_constraintTop_toTopOf="@id/chatting_detail_pharmacist_civ"
             app:layout_constraintBottom_toBottomOf="@id/chatting_detail_pharmacist_civ"
             app:layout_constraintStart_toEndOf="@id/chatting_detail_pharmacist_civ"/>
 
         <Button
             android:id="@+id/chatting_detail_search_btn"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+
+            android:background="@drawable/ic_search"
+
             android:layout_marginEnd="10dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -48,11 +53,14 @@
 
         <Button
             android:id="@+id/chatting_detail_menu_btn"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+
+            android:background="@drawable/ic_hambuger"
+
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -86,26 +94,39 @@
 
         <Button
             android:id="@+id/chatting_detail_more_btn"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+
+            android:layout_margin="10dp"
+
+            android:background="@drawable/ic_plus"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/chatting_detail_chat_et"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/chatting_detail_chat_et"
             android:layout_width="0dp"
             android:layout_height="50dp"
-            android:background="@color/white"
+            android:background="@drawable/round_white_50dp"
+            android:paddingLeft="15dp"
             app:layout_constraintStart_toEndOf="@id/chatting_detail_more_btn"
             app:layout_constraintEnd_toStartOf="@id/chatting_detail_send_btn"
             app:layout_constraintTop_toTopOf="parent"/>
 
         <Button
             android:id="@+id/chatting_detail_send_btn"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+
+            android:background="@drawable/ic_sendbtn"
+            android:layout_margin="10dp"
+
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/chatting_detail_chat_et"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
